# forge

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix
.beads/: config.yaml  metadata.json
schema/: forge.concept.schema
src/: error.rs  lib.rs  main.rs  uds.rs
src/actors/: arca_depositor.rs  file_materialiser.rs  mod.rs  nix_runner.rs  store_writer.rs
