[package]
name         = "lojix"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/lojix"
description  = "lojix — the lojix daemon (forge + store + deploy actors). Receives effect-bearing signal verbs over UDS from criome; runs nix; bundles into lojix-store."

[lib]
name = "lojix"
path = "src/lib.rs"

[[bin]]
name = "lojix"
path = "src/main.rs"

[dependencies]
ractor = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "net"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[lints.rust]
unused = "allow"
dead_code = "allow"
